<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp">

    <GridLayout
        android:id="@+id/home_title_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:columnCount="2"
        android:rowCount="1">

        <TextView
            android:id="@+id/home_title"
            android:layout_columnWeight="1"
            android:layout_gravity="center_vertical"
            android:text="@string/files"
            android:textSize="23sp" />

        <ImageButton
            android:id="@+id/home_layout_changer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@android:color/transparent"
            android:src="@drawable/list_view" />

    </GridLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <com.google.android.material.progressindicator.CircularProgressIndicator
            android:id="@+id/home_progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:progress="80"
            android:textAlignment="center"
            app:indicatorColor="@color/primary"
            app:trackColor="@color/white"
            app:trackThickness="8dp" />

        <TextView
            android:id="@+id/home_no_files"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:textSize="18sp"
            android:visibility="gone"
            android:text="@string/no_files"
            android:textColor="@color/grey" />

    </LinearLayout>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/home_title_layout" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="10dp"
        android:backgroundTint="@color/primary"
        android:contentDescription="@string/add"
        android:src="@drawable/add"
        app:tint="@color/white" />

</RelativeLayout>