<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        app:strokeColor="@color/stroke_color"
        app:strokeWidth="1dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="10dp">

                <ImageView
                    android:id="@+id/file_item_grid_file_type"
                    android:layout_width="75dp"
                    android:layout_height="75dp"
                    android:layout_gravity="center"
                    android:src="@drawable/pdf"
                    android:contentDescription="@string/type_of_file" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:background="@color/grey" />

            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:columnCount="2"
                android:rowCount="1">

                <TextView
                    android:id="@+id/file_item_grid_file_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_columnWeight="1"
                    android:padding="10dp"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:text="@string/file_name"
                    android:textAlignment="center"
                    android:textSize="18sp" />

                <ImageButton
                    android:id="@+id/file_item_grid_menu_button"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="end"
                    android:contentDescription="@string/pdf"
                    android:backgroundTint="@android:color/transparent"
                    android:src="@drawable/menu" />
            </GridLayout>


        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

</LinearLayout>