<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        app:strokeColor="@color/stroke_color"
        app:strokeWidth="1dp">

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:columnCount="3"
            android:padding="10dp"
            android:rowCount="1">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="75dp"
                android:gravity="center"
                android:padding="10dp">

                <ImageView
                    android:id="@+id/file_item_linear_file_type"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:src="@drawable/pdf" />
            </LinearLayout>

            <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="75dp"
                    android:padding="5dp"
                    android:orientation="vertical"
                    android:layout_columnWeight="1">
                    <TextView
                        android:id="@+id/file_item_linear_file_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/file_name"
                        android:ellipsize="end"
                        android:maxLines="1"
                        android:textSize="18sp" />
                    <TextView
                        android:id="@+id/file_item_linear_file_uploaded"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_rowWeight="10"
                        android:layout_marginTop="8dp"
                        android:layout_columnWeight="1"
                        android:text="@string/uploaded_time"
                        android:textSize="16sp" />
                </LinearLayout>

            <ImageButton
                android:id="@+id/file_item_linear_menu_button"
                android:layout_width="wrap_content"
                android:layout_height="75dp"
                android:backgroundTint="@android:color/transparent"
                android:contentDescription="@string/pdf"
                android:src="@drawable/menu" />



        </GridLayout>
    </com.google.android.material.card.MaterialCardView>
</LinearLayout>